# discogs-wants-fetcher

./: Cargo.toml  README.md  banner
src/: client.rs  lib.rs  main.rs  wants.rs
