[package]
name = "discogs-wants-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
owo-colors = "4.2.3"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
